add practice lesson 2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IT Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
@@ -77,35 +84,35 @@
         <ul class="list">
           <li class="item">
             <a class="link" href="">
-              <img class="img" src="./img/" width="30" height="30" alt="иконка" />
+              <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
               <span class="decor">125</span>
               <p class="description">Our projects</p>
             </a>
           </li>
           <li class="item">
             <a class="link" href="">
-              <img class="img" src="./img/" width="30" height="30" alt="иконка" />
+              <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
               <span class="decor">125</span>
               <p class="description">Our projects</p>
             </a>
           </li>
           <li class="item">
             <a class="link" href="">
-              <img class="img" src="./img/" width="30" height="30" alt="иконка" />
+              <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
               <span class="decor">125</span>
               <p class="description">Our projects</p>
             </a>
           </li>
           <li class="item">
             <a class="link" href="">
-              <img class="img" src="./img/" width="30" height="30" alt="иконка" />
+              <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
               <span class="decor">125</span>
               <p class="description">Our projects</p>
             </a>
           </li>
           <li class="item">
             <a class="link" href="">
-              <img class="img" src="./img/" width="30" height="30" alt="иконка" />
+              <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
               <span class="decor">125</span>
               <p class="description">Our projects</p>
             </a>
@@ -147,7 +154,113 @@
           </li>
         </ul>
       </section>
+      <section class="section all-projects">
+        <h2 class="title">Наши проекты</h2>
+        <p class="text">
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
+          "рыбой" для текстов на латинице с начала XVI века.
+        </p>
+        <ul class="list">
+          <li class="item">
+            <img src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+          </li>
+          <li class="item">
+            <img src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+          </li>
+          <li class="item">
+            <img src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+          </li>
+          <li class="item">
+            <img src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+          </li>
+        </ul>
+        <a class="link" href="">Все проекты</a>
+      </section>
+      <section class="section video">
+        <h2 class="title">Видео о нашей работе</h2>
+        <p class="text">Просто посмотрите, как мы работаем</p>
+        <div class="wrapper">
+          <div class="thumb">
+            <button class="video-btn" type="button">
+              <img src="./img/video/play-button.png" alt="Кнопка проигрывателя" width="60" height="60" />
+            </button>
+            <span class="descr">Смотреть видео</span>
+          </div>
+        </div>
+      </section>
+      <section class="section subscribe">
+        <h2 class="title">Подпишитесь на нашу рассылку</h2>
+        <p class="text">Полезные статьи, акции, новости - получите все это сейчас!</p>
+        <form class="form" action="">
+          <input class="form-input" type="email" placeholder="Ваш e-mail" />
+          <button class="form-btn">Подписаться</button>
+        </form>
+        <p class="subscription-text">Мы не шлем спам, и передаем никому ваши данные.</p>
+      </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <ul class="list">
+        <li class="item">
+          <h3 class="footer-title">Контактная информация</h3>
+          <address class="address">
+            <a class="link" href="mailto:test@test.ua">test@test.ua</a>
+            <a class="link" href="tel:+380999999999">+38 099 999 99 99</a>
+            <a class="link" href="https://goo.gl/maps/8oj5gV14gx7pYbMs8">Украина, ул. Леси Украинки 33</a>
+          </address>
+        </li>
+        <li class="item">
+          <h3 class="footer-title">Основные ссылки</h3>
+          <ul class="items">
+            <li class="item">
+              <a href="">Главная</a>
+            </li>
+            <li class="item">
+              <a href="">Наши проекты</a>
+            </li>
+            <li class="item">
+              <a href="">Наши услуги</a>
+            </li>
+            <li class="item">
+              <a href="">Контакты</a>
+            </li>
+          </ul>
+        </li>
+        <li class="item">
+          <h3 class="footer-title">Наши проекты</h3>
+          <ul class="items">
+            <li class="item">
+              <a href="">УкрНано</a>
+            </li>
+            <li class="item">
+              <a href="" lang="en">UnitSity</a>
+            </li>
+            <li class="item">
+              <a href="">Проект &#34;Восток&#34;</a>
+            </li>
+            <li class="item">
+              <a href="">ТЭЦ Кременчуг</a>
+            </li>
+          </ul>
+        </li>
+        <li class="item">
+          <h3 class="footer-title">Социальные сети</h3>
+          <ul class="items">
+            <li class="item">
+              <a href="" lang="en">LinkedIn</a>
+            </li>
+            <li class="item">
+              <a href="" lang="en">Instagram</a>
+            </li>
+            <li class="item">
+              <a href="" lang="en">Facebook</a>
+            </li>
+            <li class="item">
+              <a href="" lang="en">Twitter</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <p>&#169; 2021. Все права защищены.</p>
+    </footer>
   </body>
 </html>
