--- a/index.html
+++ b/index.html
@@ -59,21 +59,27 @@
             Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
             "рыбой" для текстов на латинице с начала XVI века.
           </p>
-          <ul class="list">
-            <li class="item">
+          <ul class="list grid">
+            <li class="item grid-item">
               <img src="./img/icon/services-icon.png" alt="иконка" />
-              <h3 class="subtitle text-black">Создание сайтов</h3>
-              <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+              <div class="text-wrapper">
+                <h3 class="subtitle text-black">Создание сайтов</h3>
+                <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+              </div>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <img src="./img/icon/services-icon.png" alt="иконка" />
-              <h3 class="subtitle text-black">Создание сайтов</h3>
-              <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+              <div class="text-wrapper">
+                <h3 class="subtitle text-black">Создание сайтов</h3>
+                <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+              </div>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <img src="./img/icon/services-icon.png" alt="иконка" />
-              <h3 class="subtitle text-black">Создание сайтов</h3>
-              <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+              <div class="text-wrapper">
+                <h3 class="subtitle text-black">Создание сайтов</h3>
+                <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+              </div>
             </li>
           </ul>
           <a class="link btn" href="">Все услуги</a>
@@ -82,13 +88,15 @@
       <section class="section about-us">
         <div class="container">
           <div class="wrapper">
-            <h2 class="title text-black">Высокие стандарты разработки</h2>
-            <p class="description">
-              Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
-              стандартной "рыбой" для текстов на латинице с начала XVI века. стандартной "рыбой" для текстов на латинице
-              с начала XVI века.
-            </p>
-            <a href="" class="link outter-link">Подробнее о компании</a>
+            <div class="inner-wrapper">
+              <h2 class="title text-black">Высокие стандарты разработки</h2>
+              <p class="description">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
+                стандартной "рыбой" для текстов на латинице с начала XVI века. стандартной "рыбой" для текстов на
+                латинице с начала XVI века.
+              </p>
+              <a class="link outter-link" href="">Подробнее о компании</a>
+            </div>
             <img
               class="picture"
               src="./img/about-us/about-us-img.jpg"
@@ -97,50 +105,50 @@
               alt="Стандарты разработки"
             />
           </div>
-          <ul class="list">
-            <li class="item">
+          <ul class="list grid">
+            <li class="item grid-item">
               <a class="link" href="">
-                <div class="wrapper">
+                <div class="thumb">
                   <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
                   <span class="decor text-black">125</span>
-                  <p class="description">Our projects</p>
                 </div>
+                <p class="description">Our projects</p>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="link" href="">
-                <div class="wrapper">
+                <div class="thumb">
                   <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
                   <span class="decor text-black">125</span>
-                  <p class="description">Our projects</p>
                 </div>
+                <p class="description">Our projects</p>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="link" href="">
-                <div class="wrapper">
+                <div class="thumb">
                   <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
                   <span class="decor text-black">125</span>
-                  <p class="description">Our projects</p>
                 </div>
+                <p class="description">Our projects</p>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="link" href="">
-                <div class="wrapper">
+                <div class="thumb">
                   <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
                   <span class="decor text-black">125</span>
-                  <p class="description">Our projects</p>
                 </div>
+                <p class="description">Our projects</p>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="link" href="">
-                <div class="wrapper">
+                <div class="thumb">
                   <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
                   <span class="decor text-black">125</span>
-                  <p class="description">Our projects</p>
                 </div>
+                <p class="description">Our projects</p>
               </a>
             </li>
           </ul>
@@ -148,10 +156,12 @@
       </section>
       <section class="section all-services">
         <div class="container">
-          <h2 class="title">Наши работы, на которых мы специализируемся</h2>
-          <a class="link btn" href="">Все услуги</a>
-          <ul class="list">
-            <li class="item">
+          <div class="wrapper">
+            <h2 class="title text-white">Наши работы, на которых мы специализируемся</h2>
+            <a class="link btn" href="">Все услуги</a>
+          </div>
+          <ul class="list grid">
+            <li class="item grid-item">
               <img class="img" src="./img/all-services/services-img.jpg" alt="Наши сервисы" />
               <h3 class="subtitle text-black"><span class="text-decor">01.</span> Исследование и упаковка</h3>
               <p class="text">
@@ -160,25 +170,23 @@
               </p>
               <button class="outter-link text-decor" type="button">Подробнее</button>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <img class="img" src="./img/all-services/services-img.jpg" alt="Наши сервисы" />
-              <h3 class="title text-black"><span class="text-decor">01.</span> Исследование и упаковка</h3>
+              <h3 class="subtitle text-black"><span class="text-decor">01.</span> Исследование и упаковка</h3>
               <p class="text">
                 Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
                 стандартной "рыбой" для текстов на латинице с начала XVI века.
               </p>
-
-              <button class="btn text-decor" type="button">Подробнее</button>
+              <button class="outter-link text-decor" type="button">Подробнее</button>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <img class="img" src="./img/all-services/services-img.jpg" alt="Наши сервисы" />
-              <h3 class="title text-black"><span class="text-decor">01.</span> Исследование и упаковка</h3>
+              <h3 class="subtitle text-black"><span class="text-decor">01.</span> Исследование и упаковка</h3>
               <p class="text">
                 Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
                 стандартной "рыбой" для текстов на латинице с начала XVI века.
               </p>
-
-              <button class="btn text-decor" type="button">Подробнее</button>
+              <button class="outter-link text-decor" type="button">Подробнее</button>
             </li>
           </ul>
         </div>
@@ -190,18 +198,18 @@
             Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
             "рыбой" для текстов на латинице с начала XVI века.
           </p>
-          <ul class="list">
-            <li class="item">
-              <img src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+          <ul class="list grid">
+            <li class="item grid-item">
+              <img class="all-projects-img" src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
             </li>
-            <li class="item">
-              <img src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+            <li class="item grid-item">
+              <img class="all-projects-img" src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
             </li>
-            <li class="item">
-              <img src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+            <li class="item grid-item">
+              <img class="all-projects-img" src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
             </li>
-            <li class="item">
-              <img src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+            <li class="item grid-item">
+              <img class="all-projects-img" src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
             </li>
           </ul>
           <a class="link btn" href="">Все проекты</a>
@@ -223,7 +231,7 @@
       </section>
       <section class="section subscribe">
         <div class="container">
-          <h2 class="title text-black">Подпишитесь на нашу рассылку</h2>
+          <h2 class="subtitle text-black">Подпишитесь на нашу рассылку</h2>
           <p class="text">Полезные статьи, акции, новости - получите все это сейчас!</p>
           <form class="form" action="">
             <input class="form-input" type="email" placeholder="Ваш e-mail" />
@@ -235,8 +243,8 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <ul class="list">
-          <li class="list-item">
+        <ul class="list grid">
+          <li class="list-item grid-item">
             <h3 class="footer-title text-black">Контактная информация</h3>
             <address class="address">
               <a class="link" href="mailto:test@test.ua">test@test.ua</a>
@@ -244,7 +252,7 @@
               <a class="link" href="https://goo.gl/maps/8oj5gV14gx7pYbMs8">Украина, ул. Леси Украинки 33</a>
             </address>
           </li>
-          <li class="list-item">
+          <li class="list-item grid-item">
             <h3 class="footer-title text-black">Основные ссылки</h3>
             <ul class="items">
               <li class="item">
@@ -261,7 +269,7 @@
               </li>
             </ul>
           </li>
-          <li class="list-item">
+          <li class="list-item grid-item">
             <h3 class="footer-title text-black">Наши проекты</h3>
             <ul class="items">
               <li class="item">
@@ -278,7 +286,7 @@
               </li>
             </ul>
           </li>
-          <li class="list-item">
+          <li class="list-item grid-item">
             <h3 class="footer-title text-black">Социальные сети</h3>
             <ul class="items">
               <li class="item">
