--- a/index.html
+++ b/index.html
@@ -61,21 +61,33 @@
           </p>
           <ul class="list grid">
             <li class="item grid-item">
-              <img src="./img/icon/services-icon.png" alt="иконка" />
+              <div class="icon-wrapper">
+                <svg width="40" height="40">
+                  <use href="./img/sprite.svg#icon-services"></use>
+                </svg>
+              </div>
               <div class="text-wrapper">
                 <h3 class="subtitle text-black">Создание сайтов</h3>
                 <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
               </div>
             </li>
             <li class="item grid-item">
-              <img src="./img/icon/services-icon.png" alt="иконка" />
+              <div class="icon-wrapper">
+                <svg width="40" height="40">
+                  <use href="./img/sprite.svg#icon-services"></use>
+                </svg>
+              </div>
               <div class="text-wrapper">
                 <h3 class="subtitle text-black">Создание сайтов</h3>
                 <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
               </div>
             </li>
             <li class="item grid-item">
-              <img src="./img/icon/services-icon.png" alt="иконка" />
+              <div class="icon-wrapper">
+                <svg width="40" height="40">
+                  <use href="./img/sprite.svg#icon-services"></use>
+                </svg>
+              </div>
               <div class="text-wrapper">
                 <h3 class="subtitle text-black">Создание сайтов</h3>
                 <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
@@ -109,7 +121,9 @@
             <li class="item grid-item">
               <a class="link" href="">
                 <div class="thumb">
-                  <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
+                  <svg class="about-us-icon" width="30" height="30">
+                    <use href="./img/sprite.svg#icon-web-programming"></use>
+                  </svg>
                   <span class="decor text-black">125</span>
                 </div>
                 <p class="description">Our projects</p>
@@ -118,7 +132,9 @@
             <li class="item grid-item">
               <a class="link" href="">
                 <div class="thumb">
-                  <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
+                  <svg class="about-us-icon" width="30" height="30">
+                    <use href="./img/sprite.svg#icon-web-programming"></use>
+                  </svg>
                   <span class="decor text-black">125</span>
                 </div>
                 <p class="description">Our projects</p>
@@ -127,7 +143,9 @@
             <li class="item grid-item">
               <a class="link" href="">
                 <div class="thumb">
-                  <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
+                  <svg class="about-us-icon" width="30" height="30">
+                    <use href="./img/sprite.svg#icon-web-programming"></use>
+                  </svg>
                   <span class="decor text-black">125</span>
                 </div>
                 <p class="description">Our projects</p>
@@ -136,7 +154,9 @@
             <li class="item grid-item">
               <a class="link" href="">
                 <div class="thumb">
-                  <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
+                  <svg class="about-us-icon" width="30" height="30">
+                    <use href="./img/sprite.svg#icon-web-programming"></use>
+                  </svg>
                   <span class="decor text-black">125</span>
                 </div>
                 <p class="description">Our projects</p>
@@ -145,7 +165,9 @@
             <li class="item grid-item">
               <a class="link" href="">
                 <div class="thumb">
-                  <img class="img" src="./img/about-us/web-programming.png" width="30" height="30" alt="иконка" />
+                  <svg class="about-us-icon" width="30" height="30">
+                    <use href="./img/sprite.svg#icon-web-programming"></use>
+                  </svg>
                   <span class="decor text-black">125</span>
                 </div>
                 <p class="description">Our projects</p>
@@ -200,16 +222,40 @@
           </p>
           <ul class="list grid">
             <li class="item grid-item">
-              <img class="all-projects-img" src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+              <img
+                class="all-projects-img"
+                src="./img/all-projects/project.jpg"
+                alt="Проект"
+                width="255"
+                height="255"
+              />
             </li>
             <li class="item grid-item">
-              <img class="all-projects-img" src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+              <img
+                class="all-projects-img"
+                src="./img/all-projects/project.jpg"
+                alt="Проект"
+                width="255"
+                height="255"
+              />
             </li>
             <li class="item grid-item">
-              <img class="all-projects-img" src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+              <img
+                class="all-projects-img"
+                src="./img/all-projects/project.jpg"
+                alt="Проект"
+                width="255"
+                height="255"
+              />
             </li>
             <li class="item grid-item">
-              <img class="all-projects-img" src="./img/all-projects/project.jpg" alt="Проект" width="255" height="255" />
+              <img
+                class="all-projects-img"
+                src="./img/all-projects/project.jpg"
+                alt="Проект"
+                width="255"
+                height="255"
+              />
             </li>
           </ul>
           <a class="link btn" href="">Все проекты</a>
@@ -222,7 +268,9 @@
           <div class="wrapper">
             <div class="thumb">
               <button class="video-btn" type="button">
-                <img src="./img/video/play-button.png" alt="Кнопка проигрывателя" width="60" height="60" />
+                <svg width="60" height="60">
+                  <use href="./img/sprite.svg#icon-play-button"></use>
+                </svg>
               </button>
               <span class="descr text-white">Смотреть видео</span>
             </div>
@@ -247,25 +295,60 @@
           <li class="list-item grid-item">
             <h3 class="footer-title text-black">Контактная информация</h3>
             <address class="address">
-              <a class="link" href="mailto:test@test.ua">test@test.ua</a>
-              <a class="link" href="tel:+380999999999">+38 099 999 99 99</a>
-              <a class="link" href="https://goo.gl/maps/8oj5gV14gx7pYbMs8">Украина, ул. Леси Украинки 33</a>
+              <a class="link" href="mailto:test@test.ua">
+                <svg class="footer-icon" width="15" height="15">
+                  <use href="./img/sprite.svg#icon-mail"></use>
+                </svg>
+                test@test.ua</a
+              >
+              <a class="link" href="tel:+380999999999">
+                <svg class="footer-icon" width="15" height="15">
+                  <use href="./img/sprite.svg#icon-phone"></use>
+                </svg>
+                +38 099 999 99 99</a
+              >
+              <a class="link" href="https://goo.gl/maps/8oj5gV14gx7pYbMs8">
+                <svg class="footer-icon" width="15" height="15">
+                  <use href="./img/sprite.svg#icon-geo-tag"></use>
+                </svg>
+                Украина, ул. Леси Украинки 33</a
+              >
             </address>
           </li>
           <li class="list-item grid-item">
             <h3 class="footer-title text-black">Основные ссылки</h3>
             <ul class="items">
               <li class="item">
-                <a href="">Главная</a>
+                <a class="footer-items-link" href="">
+                  <svg class="arrow-right" width="10" height="10">
+                    <use href="./img/sprite.svg#icon-right-arrow"></use>
+                  </svg>
+                  Главная
+                </a>
               </li>
               <li class="item">
-                <a href="">Наши проекты</a>
+                <a class="footer-items-link" href="">
+                  <svg class="arrow-right" width="10" height="10">
+                    <use href="./img/sprite.svg#icon-right-arrow"></use>
+                  </svg>
+                  Наши проекты</a
+                >
               </li>
               <li class="item">
-                <a href="">Наши услуги</a>
+                <a class="footer-items-link" href="">
+                  <svg class="arrow-right" width="10" height="10">
+                    <use href="./img/sprite.svg#icon-right-arrow"></use>
+                  </svg>
+                  Наши услуги</a
+                >
               </li>
               <li class="item">
-                <a href="">Контакты</a>
+                <a class="footer-items-link" href="">
+                  <svg class="arrow-right" width="10" height="10">
+                    <use href="./img/sprite.svg#icon-right-arrow"></use>
+                  </svg>
+                  Контакты</a
+                >
               </li>
             </ul>
           </li>
